@@ -10,6 +10,7 @@ and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0
 - [API_PARSER] [CROWDSTRIKE] Allow to disable fetching of 'incident' logs
 ### Fixed
 - [API_PARSER] [GATEWATCHER_ALERTS] Avoid missing logs by setting the last_api_call the timestamp of the last retrieved log
+- [API_PARSER] [NOZOMI] Some alerts were not collected - because inserted after newer alerts
 
 
 ## [2.15.6] - 2024-07-12
